--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "express": "^4.16.3",
     "lodash": "^4.17.11",
     "md5": "^2.2.1",
+    "read-last-lines": "^1.6.0",
     "socket.io": "^2.1.1"
   },
   "devDependencies": {},
