--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "chokidar": "^2.0.4",
+    "deep-equal": "^1.0.1",
     "express": "^4.16.3",
     "lodash": "^4.17.11",
     "md5": "^2.2.1",
